<resources>
    <string name="app_name">Parking</string>
    <string name="clients">Clientes</string>
    <string name="dummy_forty">40</string>
    <string name="up_to_date">Al día</string>
    <string name="dummy_sixteen">16</string>
    <string name="pending">Pendientes</string>
    <string name="pending_payment">Pendiente</string>
    <string name="dummy_twenty_four">24</string>
    <string name="payment">Pagó</string>
    <string name="register">Registrar</string>
    <string name="register_title">Registro</string>
    <string name="client_name">Nombre del cliente</string>
    <string name="client_identification">Cedula</string>
    <string name="client_phone">Celular</string>
    <string name="client_plaque">Placa del vehiculo</string>
    <string name="date">Fecha</string>
    <string name="register_clients">Registrar</string>
    <string name="dummy_name">Jeremy Mathias Amadeus</string>
    <string name="dummy_plaque">WUK-872</string>
    <string name="title_register">Registro del cliente</string>
    <string name="title_list_clients">Listado de clientes</string>
    <string name="client_detail">Detalle del cliente</string>
    <string name="dummy_detail_name">Nombre: Alberto Jose Arango</string>
    <string name="dummy_detail_identification">Cedula: 1118365874</string>
    <string name="dummy_detail_plaque">Placa: WJK-784</string>
    <string name="dummy_detail_phone">Celular: 3154786541</string>
    <string name="dummy_detail_rate">Tarifa: $80.000</string>
    <string name="dummy_detail_start_date">Fecha de ingreso: 04/05/2020</string>
    <string name="dummy_detail_due_date">Proximo corte: 04/06/2020</string>
    <string name="paid">Pagó</string>
    <string name="created_by">Creado por la calidad de yerno</string>
    <string name="title_splash">Mini Parking App</string>
    <string name="no_clients">No hay clientes registrados</string>
    <string name="title_main">Mini Parking App</string>
    <string name="title_main_parking">Parqueadero la calidad</string>
    <string name="loading">Cargando…</string>
    <string name="updated_client">Cliente actualizado!</string>
    <string name="search">Buscar</string>
    <string name="not_results">Sin resultados</string>
    <string name="edit">Editar</string>
    <string name="title_edit">Actualizar cliente</string>
    <string name="update">Actualizar</string>

    <string name="update_success">Actualización correcta</string>
    <string name="rate">Tarifa</string>
    <string name="type_name">Ingrese nombre</string>
    <string-array name="prices">
        <item>$90.000</item>
        <item>$60.000</item>
        <item>$40.000</item>
        <item>$15.985</item>
    </string-array>
</resources>
