<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.main.view.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/action_bar" />

    <ImageView
        android:id="@+id/main_img_parking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:src="@drawable/ic_garage"
        app:layout_constraintBottom_toTopOf="@+id/main_llyout_totals"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/main_txt_title_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/four_dp"
        android:text="@string/title_main_parking"
        android:textColor="@color/deep_blue"
        android:textSize="@dimen/big_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_img_parking" />

    <LinearLayout
        android:id="@+id/main_llyout_totals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/main_llyout_optionsA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clients"
                android:textAlignment="center"
                android:textSize="@dimen/normal_font_size" />

            <TextView
                android:id="@+id/main_txt_total_clients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_forty"
                android:textAlignment="center"
                android:textSize="@dimen/normal_font_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up_to_date"
                android:textAlignment="center"
                android:textSize="@dimen/normal_font_size" />

            <TextView
                android:id="@+id/main_txt_paid_clients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_sixteen"
                android:textAlignment="center"
                android:textSize="@dimen/normal_font_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:textAlignment="center"
                android:textSize="@dimen/normal_font_size" />

            <TextView
                android:id="@+id/main_txt_pending_clients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_twenty_four"
                android:textAlignment="center"
                android:textSize="@dimen/normal_font_size"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_llyout_optionsA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/main_llyout_optionsB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/eight_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/main_llyout_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/ten_dp"
                android:paddingBottom="@dimen/six_dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/main_img_register"
                    android:layout_width="@dimen/width_image_main"
                    android:layout_height="@dimen/width_image_main"
                    android:src="@drawable/ic_person_add_depp_blue"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_clients"
                    android:textAlignment="center"

                    android:textSize="@dimen/normal_font_size" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/eight_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/main_llyout_list_clients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/ten_dp"
                android:paddingBottom="@dimen/six_dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/main_img_list"
                    android:layout_width="@dimen/width_image_main"
                    android:layout_height="@dimen/width_image_main"
                    android:src="@drawable/ic_people_deep_blue"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clients"
                    android:textAlignment="center"
                    android:textSize="@dimen/normal_font_size" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_llyout_optionsB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:orientation="horizontal"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginRight="@dimen/eight_dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/eight_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/ten_dp"
                android:paddingBottom="@dimen/six_dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/width_image_main"
                    android:layout_height="@dimen/width_image_main"
                    android:src="@drawable/ic_launcher_background"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clients"
                    android:textAlignment="center"
                    android:textSize="@dimen/normal_font_size" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginRight="@dimen/eight_dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/eight_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/ten_dp"
                android:paddingBottom="@dimen/six_dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/width_image_main"
                    android:layout_height="@dimen/width_image_main"
                    android:src="@drawable/ic_launcher_background"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clients"
                    android:textAlignment="center"
                    android:textSize="@dimen/normal_font_size" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>